# Spork

./: 2pass.txt  3pass.txt  CMakeLists.txt  README.md  config_file.json  scaling-spork.cpp  server.py  spaghetti.cpp  spork.cpp  statelist.cpp  statelist.hpp  usernames.txt
bruteforce_demo/: app.py
bruteforce_demo/templates/: login.html
